# prompt-compressor

./: .gitignore  README.md  app.py  pyproject.toml
compressor/: hybrid.py  pruner.py  utils.py
models/: embedder.py  scorer.py  summarizer.py
static/: app.js  style.css
templates/: index.html
